--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -53,7 +53,8 @@
     
 
 </body>
-<img id="HighLightCard" src="CardImages/Ash.webp">
+<img id="HighLightCard" src="">
+<script>src ="jquery-3.6.3.js"</script>
 <script  src="Script.js"></script>
 
 </html>
