Fixa med localhost

--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -41,13 +41,9 @@
             </div>
         </form>
 
-        <article>
-            <p>Joined players </p>
-
+        <p>Joined players </p>
+        <article id ="PlayersJoined">
             
-            <div id="FormButtonDiv">
-                <button id="StartButton">Start</button>
-            </div>
         </article>
         
         <div id="draftableCardsSection">
