--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -35,9 +35,9 @@
             
             </fieldset>
             <div id = "downloadButtonDiv">
-                <label id="LabelJoinInput" for="InputFieldAmountOfPack">Join lobby</label><br>
+                <label id="LabelJoinInput" for="InputFieldJoin">Join lobby</label><br>
                 <input type="text" id="InputFieldJoin" name="InputFieldJoin"><br>  
-                <button id="JoinButton">Join</button>
+                <button id="JoinButton" type="button">Join</button>
             </div>
         </form>
 
