Fix med att joina och hosta lobby

--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -40,9 +40,12 @@
                 <button id="JoinButton" type="button">Join</button>
             </div>
         </form>
+        <div id = "downloadButtonDiv" >
+            <button id="startLobbyButton" type="button" hidden = "true">Start lobby</button>
+        </div>
 
-        <p>Joined players </p>
         <article id ="PlayersJoined">
+            <p>Joined players </p>
             
         </article>
         
