--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -42,6 +42,7 @@
         </form>
         <div id = "downloadButtonDiv" >
             <button id="startLobbyButton" type="button" hidden = "true">Start lobby</button>
+            <p id = "lobbyIdText"> Lobby id: - </p>
         </div>
 
         <article id ="PlayersJoined">
