Fixande med YDK format och grejer. Sista push innan speltest

--- a/DraftWebsiteHTML/placeholder.html
+++ b/DraftWebsiteHTML/placeholder.html
@@ -18,14 +18,14 @@
             <fieldset>
 
                 <legend>Select parameters for draft</legend>
-                <label id="LabelInputFieldCardPerPack" for="InputFieldCardPerPack">Cards per pack</label><br>
+                <label id="LabelInputFieldCardPerPack" for="InputFieldCardPerPack">Cards main deck pack</label><br>
                 <input type="number" id="InputFieldCardPerPack" name="InputFieldCardPerPack" value="1" min="1"><br>
 
                 <label id="LabelInputFieldAmountPerPack" for="InputFieldAmountOfPack">Amount of packs</label><br>
                 <input type="number" id="InputFieldAmountOfPack" name="InputFieldAmountOfPack"value="1" min="1"><br>
 
                 
-                <label id="LabelInputFieldAmountOfPlayers" for="InputFieldAmountOfPlayers">Amount of players</label><br>
+                <label id="LabelInputFieldAmountOfPlayers" for="InputFieldAmountOfPlayers">Cards per extra deck pack</label><br>
                 <input type="number" id="InputFieldAmountOfPlayers" name="InputFieldAmountOfPlayers"value="2" min="2"><br>
                 
 
